# evm-trade-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  config.yml  flake.nix  main.py  nixos-module.nix  pyproject.toml  requirements.txt  trade-tracker.yaml.example
.direnv/: flake-profile-2-link
src/trade_tracker/: __main__.py  alchemy.py  blockchain.py  cache.py  cli.py  config.py  models.py  trades.py
src/trade_tracker/exporters/: clickhouse.py  json_exporter.py
tests/: test_config.py  test_hex_utils.py  test_models.py  test_trades.py
